iPad portrait, clearfix

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 </div>
 
 <div class="seperator" data-scroll-reveal="ease move 100px"></div>
-<div class="info ">
-  <div class="hexImages">
+<div class="info clearfix">
+  <div class="hexImages ">
     <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex1.png" alt="">
     <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex2.png" alt="">
     <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex3.png" alt="">
   </div>
-  <div class="hexText clearfix">
+  <div class="hexText">
     <div class="outer" data-scroll-reveal="ease-in 200px and reset over .66s">
       <div class="inner">
         <h3>Savor</h3>
