no zoom landscape orientation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HanaHaus, a public cafe</title>
  <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+ <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
   <script type="text/javascript" src="js/skrollr.min.js"></script>
