no zoom landscape orientation

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
   ga('create', 'UA-53591413-1', 'auto');
   ga('send', 'pageview');
 </script>
-<script>window.onorientationchange = function() { var orientation = window.orientation; switch(orientation) { case 0: window.location.reload(); break; case 90: window.location.reload(); break; case -90: window.location.reload(); break; } }</script>
+<!--<script>window.onorientationchange = function() { var orientation = window.orientation; switch(orientation) { case 0: window.location.reload(); break; case 90: window.location.reload(); break; case -90: window.location.reload(); break; } }</script>-->
 </body>
 </html>
