--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>HanaHaus, a public cafe</title>
  <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
   <script type="text/javascript" src="js/skrollr.min.js"></script>
   <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
   <link href="css/style.css" type="text/css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 <body>
