--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="js/skrollr.min.js"></script>
   <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
   <link href="css/style.css" type="text/css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width">
 
 </head>
 <body>
