--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <title>HanaHaus, a public cafe</title>
  <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
-  <script type="text/javascript" src="js/skrollr.min.js"></script>
   <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
   <link href="css/style.css" type="text/css" rel="stylesheet">
 <meta name="viewport" content="width=device-width">
@@ -22,7 +20,7 @@
   
 </div>  
   <div class="intro">
-    <div class="introSide">
+    <div class="introSide"  data-scroll-reveal="ease-in 200px and reset over .66s">
       <h2>HanaHaus</h2>
       <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
     </p>
