change mobile text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </div>
 <div class="introText mobile">
-  <p>A community of purpose. We are defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
+  <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
   </p>
 </div>
 <div class="location">
