sag resize handler, bottom separator height adjustment

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
   </div>
 </div> 
-<div class="seperator" data-scroll-reveal="ease move 200px"></div>
+<div class="seperator bottom" data-scroll-reveal="ease move 200px"></div>
 <div class="mobile drawing">
  </div>
 <div class="subscribe" data-scroll-reveal="ease move 300px">
