--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 <div class="home">
   <svg width="100%" height ="100%" id="svg"></svg>
-  <img src="img/arrow.png"></img>
+  <img src="img/arrow.png" alt="Scroll down to navigate" data-0="opacity:1" data--100-bottom-bottom="opacity:0"></img>
   
   
 </div>  
-  <div class="intro">
-    <div class="introSide"  data-scroll-reveal="ease-in 200px and reset over .66s">
+  <div class="intro" data-0="height[swing]:450px" data-200-top-bottom="height[swing]:600px" data--500-top-bottom="height:500px">
+    <div class="introSide" data-0="margin-top[swing]:200px" data-center-bottom="margin-top[swing]:-160px" data-top-bottom="margin-top[swing]:-200px">
       <h2>HanaHaus</h2>
       <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
     </p>
@@ -35,25 +35,25 @@
   <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
   </p>
 </div>
-<div class="location">
+<div class="location" data-200-top-bottom="height:0px" data--50-top-bottom="height:70px">
   <a href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3"><img src="img/map.png" alt=""> 456 University Ave, Palo Alto</a>
 </div>
 
-<div class="seperator" data-scroll-reveal="ease move 100px"></div>
-<div class="info">
-  <div class="hexImages ">
-    <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex1.png" alt="">
-    <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex2.png" alt="">
-    <img data-scroll-reveal="ease-in 200px and reset over .66s" src="img/hex3.png" alt="">
+<div class="seperator" data-400-top-bottom="height:0px" data--100-top-bottom="height:250px"></div>
+<div class="info" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px" >
+  <div class="hexImages " data--300-top-top="margin-top:0px" data--300-top-bottom="margin-top:200px">
+    <img src="img/hex1.png" alt="HanaHaus" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
+    <img src="img/hex2.png" alt="HanaHaus" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
+    <img src="img/hex3.png" alt="HanaHaus" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
   </div>
   <div class="hexText clearfix">
-    <div class="outer" data-scroll-reveal="ease-in 200px and reset over .66s">
+    <div class="outer" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
       <div class="inner">
         <h3>Savor</h3>
         <p>Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for breakfast, lunch and dinner</p>
       </div>
     </div>
-    <div class="outer" data-scroll-reveal="ease-in 200px and reset over .66s">
+    <div class="outer" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
       <div class="inner">
         <h3>Work</h3>
         <p> Resources for entrepreneurs
@@ -61,13 +61,13 @@
   and investors</p>
       </div>
     </div>
-    <div class="outer" data-scroll-reveal="ease-in 200px and reset over .66s">
+    <div class="outer" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
       <div class="inner">
         <h3>Learn</h3>
         <p>Lectures and teachings by experts in areas of interest to technology entrepreneurs</p>
         </div>
     </div>
-    <div class="outer" data-scroll-reveal="ease-in 200px and reset over .66s">
+    <div class="outer" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px">
       <div class="inner">
         <h3>Play</h3>
         <p>Music, stand-up comedy, movies and other entertainment for the local community</p>
@@ -78,10 +78,10 @@
     
   </div>
 </div> 
-<div class="seperator bottom" data-scroll-reveal="ease move 200px"></div>
+<div class="seperator bottom" data-400-top-bottom="height:0px" data--100-top-bottom="height:150px"></div>
 <div class="mobile drawing">
  </div>
-<div class="subscribe" data-scroll-reveal="ease move 300px">
+<div class="subscribe" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px" >
   <form action="#" id="ajax-form">
     <p>Enter your email below and get shortlisted to our opening party.</p>
     <input type="text" id="email" name="email"><br>
@@ -89,7 +89,7 @@
   </form>
   <p class="success" id="success">Thank you for subscribing.<br> We'll keep you posted.</p>
 </div>
-<div class="social" data-scroll-reveal="ease move 200px">
+<div class="social" data-500-top-top="margin-top[swing]:400px" data--200-top-top="margin-top[swing]:0px" >
   <h3>Spread The Word</h3>
   <span>
   <a href="https://www.facebook.com/hanahaus"><img src="img/facebook.png" alt=""></a>
@@ -97,14 +97,9 @@
   </span>
 </div>
 
-
+<script src="js/skrollr.min.js"></script>
 <script src="js/script.js"></script>
-  <script src='js/scrollReveal.js-master/scrollReveal.js'></script> 
-  <script>
-    if (!("ontouchstart" in document.documentElement)) {
-      window.scrollReveal = new scrollReveal();
-    }
-  </script>
+  
 <script type="text/javascript"> 
       $('#ajax-form').submit(function(){
         console.log($("#email").val());
