animation timing change

--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 </div>
 
 <div class="seperator" data-_svgH-800="height:1px" data-_svgH-1000="height:250px"></div>
-<div class="info" data-_svgH-800="margin-top:300px"  data-_svgH-1100="margin-top:0px" >
+<div class="info" data-_svgH-800="margin-top[swing]:300px"  data-_svgH-1100="margin-top:0px" >
   <div class="hexImages">
-    <img src="img/hex1.png" alt="HanaHaus">
-    <img src="img/hex2.png" alt="HanaHaus" data-_svgH-1400="top:200px" data-_svgH-1600="top:0px">
-    <img src="img/hex3.png" alt="HanaHaus" data-_svgH-1600="top:200px" data-_svgH-1800="top:0px">
+    <img src="img/hex1.png" alt="HanaHaus" data-_svgH-1200="top[swing]:200px" data-_svgH-1400="top:0px">
+    <img src="img/hex2.png" alt="HanaHaus" data-_svgH-1400="top[swing]:200px" data-_svgH-1600="top:0px">
+    <img src="img/hex3.png" alt="HanaHaus" data-_svgH-1800="top[swing]:200px" data-_svgH-2000="top:0px">
   </div>
-  <div class="hexText clearfix" data-_svgH-1100="top:0px" data-_svgH-3600="top:-200px">
-    <div class="outer" data-_svgH-1100="top:200px" data-_svgH-1300="top:0px">
+  <div class="hexText clearfix" data-_svgH-1100="top[swing]:0px" data-_svgH-3600="top:-200px">
+    <div class="outer" data-_svgH-1100="top[swing]:200px" data-_svgH-1300="top:0px">
       <div class="inner">
         <h3>Savor</h3>
         <p>Outdoor/Indoor cafe serving world-class coffee and nourishing food service in a bistro setting. Open to all for breakfast, lunch and dinner</p>
       </div>
     </div>
-    <div class="outer" data-_svgH-1300="top:200px" data-_svgH-1500="top:0px">
+    <div class="outer" data-_svgH-1300="top[swing]:200px" data-_svgH-1500="top:0px">
       <div class="inner">
         <h3>Work</h3>
         <p> Resources for entrepreneurs
@@ -61,13 +61,13 @@
   and investors</p>
       </div>
     </div>
-    <div class="outer" data-_svgH-1500="top:200px" data-_svgH-1700="top:0px">
+    <div class="outer" data-_svgH-1500="top[swing]:200px" data-_svgH-1700="top:0px">
       <div class="inner">
         <h3>Learn</h3>
         <p>Lectures and teachings by experts in areas of interest to technology entrepreneurs</p>
         </div>
     </div>
-    <div class="outer" data-_svgH-2100="top:200px" data-_svgH-2300="top:0px">
+    <div class="outer" data-_svgH-2100="top[swing]:200px" data-_svgH-2300="top:0px">
       <div class="inner">
         <h3>Play</h3>
         <p>Music, stand-up comedy, movies and other entertainment for the local community</p>
