--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <meta name="viewport" content="width=device-width">
 
 </head>
-<body>
+<body >
 <div class="home">
   <svg width="100%" height ="100%" id="svg"></svg>
   <img src="img/arrow.png" alt="Scroll down to navigate" data-0="opacity:1" data--100-bottom-bottom="opacity:0"></img>
   
   
 </div>  
-  <div class="intro" data-_svgH="height[swing]:500px" data-_svgH-500="height[swing]:650px" data-_svgH-1000="height:500px">
-    <div class="introSide" data-_svgH="margin-top[swing]:200px" data-_svgH-400="margin-top[swing]:-160px" data-_svgH-1000="margin-top[swing]:-350px" data-anchor-target=".home">
+  <div class="intro" data-_svgH="height[swing]:550px;background-position: 0px 0px" data-_svgH-500="height[swing]:700px" data-_svgH-1000="height:500px;background-position: 0px -100px">
+    <div class="introSide" data-_svgH="margin-top[swing]:200px" data-_svgH-400="margin-top[swing]:-120px" data-_svgH-1000="margin-top[swing]:-300px" data-anchor-target=".home">
       <h2>HanaHaus</h2>
       <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
     </p>
@@ -39,10 +39,10 @@
   <a href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3"><img src="img/map.png" alt=""> 456 University Ave, Palo Alto</a>
 </div>
 
-<div class="seperator" data-_svgH-800="height:1px" data-_svgH-1000="height:250px"></div>
-<div class="info" data-_svgH-800="margin-top[swing]:300px"  data-_svgH-1100="margin-top:0px" >
+<div class="seperator" data-_svgH-800="height:1px" data-_svgH-1000="height:150px"></div>
+<div class="info" data-_svgH-650="margin-top[swing]:300px"  data-_svgH-900="margin-top:0px" >
   <div class="hexImages">
-    <img src="img/hex1.png" alt="HanaHaus" data-_svgH-1100="top[swing]:250px" data-_svgH-1400="top:0px">
+    <img src="img/hex1.png" alt="HanaHaus" data-_svgH-800="top[swing]:250px" data-_svgH-1100="top:0px">
     <img src="img/hex2.png" alt="HanaHaus" data-_svgH-1400="top[swing]:300px" data-_svgH-1700="top[swing]:0px" data-_svgH-2300="top[swing]:30px">
     <img src="img/hex3.png" alt="HanaHaus" data-_svgH-1700="top[swing]:200px" data-_svgH-2000="top:0px">
   </div>
@@ -78,10 +78,10 @@
     
   </div>
 </div> 
-<div class="seperator bottom" data-_svgH-2700="height:0px" data-_svgH-2900="height:150px"></div>
+<div class="seperator bottom" data-_svgH-2400="height:0px" data-_svgH-2500="height:100px"></div>
 <div class="mobile drawing">
  </div>
-<div class="subscribe" data-_svgH-2900="margin-top:300px" data-_svgH-3200="margin-top:0px">
+<div class="subscribe" data-_svgH-2500="margin-top:300px" data-_svgH-2800="margin-top:0px">
   <form action="#" id="ajax-form">
     <p>Enter your email below and get shortlisted to our opening party.</p>
     <input type="text" id="email" name="email"><br>
@@ -89,7 +89,7 @@
   </form>
   <p class="success" id="success">Thank you for subscribing.<br> We'll keep you posted.</p>
 </div>
-<div class="social" data-_svgH-3200="margin-top:100px" data-_svgH-3300="margin-top:0px">
+<div class="social" data-_svgH-2700="margin-top:100px" data-_svgH-2900="margin-top:0px">
   <h3>Spread The Word</h3>
   <span>
   <a href="https://www.facebook.com/hanahaus"><img src="img/facebook.png" alt=""></a>
