--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
  <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<meta name="description" content="A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts">
+<meta name="description" content="A community of purpose defining a new caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts">
+<meta name="keywords" content="cafe, startup, hanahaus, hana, haus">
   <script type="text/javascript" src="js/d3.v3.min.js"></script>
   <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
   <link href="css/style.css" type="text/css" rel="stylesheet">
 <meta name="viewport" content="width=device-width">
 
 </head>
-<body >
+<body itemscope itemtype="http://schema.org/LocalBusiness">
 <div class="home">
   <svg width="100%" height ="100%" id="svg"></svg>
   <img src="img/arrow.png" alt="Scroll down to navigate" data-0="opacity:1" data--100-bottom-bottom="opacity:0"></img>
@@ -21,8 +22,8 @@
 </div>  
   <div class="intro" data-_svgH="height[swing]:550px;background-position: 0px 0px" data-_svgH-500="height[swing]:700px" data-_svgH-1000="height:500px;background-position: 0px -100px">
     <div class="introSide" data-_svgH="margin-top[swing]:200px" data-_svgH-400="margin-top[swing]:-120px" data-_svgH-1000="margin-top[swing]:-300px" data-anchor-target=".home">
-      <h2>HanaHaus</h2>
-      <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
+      <h2 itemprop="name">HanaHaus</h2>
+      <p itemprop="description">A community of purpose defining a new caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
     </p>
     </div>
   
@@ -32,14 +33,14 @@
 
 </div>
 <div class="introText mobile">
-  <p>A community of purpose defining a new Caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
+  <p>A community of purpose defining a new caf&egrave; experience where creative individuals and entrepreneurs can come together to meet, socialize, share ideas and connect with experts
   </p>
 </div>
-<div class="location" data-_svgH-700="height:0px" data-_svgH-800="height:70px">
-  <a href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3"><img src="img/map.png" alt=""> 456 University Ave, Palo Alto</a>
+<div class="location" data-_svgH-700="height:0px" data-_svgH-800="height:70px" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+  <a href="https://www.google.com/maps/place/456+University+Ave,+Palo+Alto,+CA+94301/@37.4475588,-122.1595498,17z/data=!3m1!4b1!4m2!3m1!1s0x808fbb38fcfe46f1:0xffd732ead2e767f3"><img src="img/map.png" alt=""> <span itemprop="streetAddress">456 University Ave</span>, <span itemprop="addressLocality">Palo Alto</span>
 </div>
 
-<div class="seperator" data-_svgH-800="height:1px" data-_svgH-1000="height:150px"></div>
+<div class="seperator" data-_svgH-800="height:1px" data-_svgH-1000="height:100px"></div>
 <div class="info" data-_svgH-650="margin-top[swing]:300px"  data-_svgH-900="margin-top:0px" >
   <div class="hexImages">
     <img src="img/hex1.png" alt="HanaHaus" data-_svgH-800="top[swing]:250px" data-_svgH-1100="top:0px">
